--- a/department-service.properties
+++ b/department-service.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 eureka.instance.prefer-ip-address=true
+spring.boot.message=Hello from Department Service
